# cheri-examples

./: .buildbot.sh  .clang-format  .gitignore  CMakeLists.txt  COPYRIGHT  Makefile  Makefile.morello  Makefile.morello-purecap  Makefile.riscv64  Makefile.riscv64-purecap  README.md  allocate.c  bors.toml  bounds-cxx.cpp  bounds.c  cap_build.c  check_length.c  check_mask.c  common.h  function.c  general_bounds.c  hello-cxx.cpp  hello.c  mmap.c  riscv64-purecap.cmake  seal.c  sentry.c  set_bounds.c  setjmp.c  stackscan.c  test-timsort.c  test-timsort_purecap.c  timsort.c  timsort_purecap.c  xor_pointers.c
capability_sharing/: README.md
compare_platforms/: Makefile.morello-hybrid  Makefile.morello-purecap  Makefile.riscv64-purecap  README.md  compare_platforms_overflow.c  compare_platforms_read_only.c  compare_platforms_stacksmash.c
employee/: Makefile  Makefile.common  Makefile.morello-purecap  Makefile.riscv64-purecap  README.md  employee-cinvoke.c  employee.c  full_privileges.c  read_only.c  sealed.c
hybrid/: Makefile.morello-hybrid  basic_ddc.c  cap_build.c  ddc_compartment_switching.c  ddc_invalid.c  ddc_null.c  per_func_comp_main.c  threads_ddc.c
include/: common.h  instructions.h  print.h  regs.h  timsort_lib.h
lib/: timsort_lib.c  timsort_lib.h  timsort_lib_purecap.c  timsort_lib_purecap.h  timsortdata.h
morello-c64-secure/: Makefile.morello-purecap  README.md  c64-secure.c  impls.s
richards-benchmark/: LICENSE.txt  README.md  harness.h  richards.c
shared_objects/: .gitignore  Makefile  Makefile.morello-purecap  Makefile.riscv64-purecap  README.md  (+8 more)
(+144 files in other folders)
